--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
 
+[project.scripts]
+find-deps = "main:main"
+
 [dependency-groups]
 dev = ["ruff>=0.13.0"]
 
